<resources>
    <string name="app_name">Blood Bank</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login">Log In</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_admin_home_screen">AdminHomeScreen</string>
    <string name="title_hospital">Hospitals</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_new_hospital">New Hospital</string>
    <string name="title_add_hospital">Add Hospital</string>
    <string name="title_mange_hospitals">Manage Hospitals</string>
    <string name="sign_out">Sign Out</string>
    <string name="filter_textview">Filter by city</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="city">City</string>
    <string name="working_days">Working Days</string>
    <string name="working_hours">Working Hours</string>
    <string name="working_hours_example">eg 8AM - 10PM</string>
    <string name="working_days_example">eg Tuesday - Sunday</string>
    <string name="google_maps_url">Google Maps URL</string>
    <string name="url">URL</string>
    <string name="admin">Admin</string>
    <string name="donor">Donor</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_account">I don\'t have an account. Create one.</string>

    <!--    string related to donor signup-->
    <string name="gender">Gender</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_name">Enter name</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="blood_group">Blood Group</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_up">Sign Up</string>
    <string name="back_to_login">Back to Login</string>
    <string name="title_activity_donor_home_screen">DonorHomeScreen</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <!--    info strings-->
    <string name="profile">Profile</string>
    <string name="nearby_hospitals">Nearby Hospitals</string>
    <string name="appointments">My Appointments</string>
    <string name="info">Information</string>
    <string name="notes_before_donating">Notes Before Donating :-</string>
    <string name="instruction_1">• The donor must be in good health in order to donate</string>
    <string name="instruction_2">• Age between 18 to 60 years</string>
    <string name="instruction_3">• Weight must be above 50 kg</string>
    <string name="instruction_4">• Haemoglobin level at least 12g/dll</string>
    <string name="instruction_5">• Avoid donating if you have been through a procedure,\n injection, piercing or tattoo recently</string>
    <string name="instruction_6">• You must not be pregnant or breastfeeding</string>
    <string name="instruction_7">The above rules are stated by the World Health Organization</string>
    <string name="instruction_8">This application is meant for booking and donation purposes.\n For individual suggestions, questions and \n hospital requests, kindly mail us at :- \n</string>
    <string name="instruction_9">blooddonation.app@gmail.com</string>
    <string name="confirm">Confirm</string>
    <string name="hospital_1">Hospital 1</string>
    <string name="hospital_des">Hospital Description</string>

    <!--    error messages-->
    <string name="error_not_valid">Enter valid data</string>
    <string name="error_pass">Password not valid</string>
    <string name="error_email">Enter valid email</string>
    <string name="image_hospital">image_hospital</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="confirm_appointment">Confirm Appointment</string>
    <string name="delete">Delete</string>
    <string name="select_date">Select Date</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
</resources>
